# milk-farm-system

./: .env.example  .gitignore  .gitmodules  README.md  dev.sh  docker-compose.demo.yml  docker-compose.monitoring.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  reports.txt  train-public-dataset.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  entrypoint.sh
backend/benches/: bench_auth.rs  bench_pdf.rs  bench_rate_limit.rs  bench_sql.rs
backend/migrations/: 20260406000001_init.sql  20260406000002_seed_admin.sql  20260410000002_add_performance_indexes.sql  20260410000003_add_settings.sql  20260410000004_add_revoked_tokens.sql  20260410000005_add_pg_trgm.sql  20260411000001_add_lely_support.sql  20260411000002_lely_config_table.sql  20260411000003_lely_fixes.sql  20260412000001_add_missing_indexes.sql  20260414000001_add_vet_records.sql  20260414000002_add_tasks_audit_finance.sql  20260414000003_add_inventory.sql  20260415000001_add_dashboard_widgets.sql  20260416000001_timescaledb.down.sql  20260416000001_timescaledb.up.sql  20260416000002_timescaledb_aggregates.up.sql  20260417000001_inventory_numeric_to_float8.down.sql  20260417000001_inventory_numeric_to_float8.up.sql  20260418000001_alerts.down.sql  20260418000001_alerts.up.sql  20260418000002_weather.down.sql  20260418000002_weather.up.sql  20260418000003_notifications.down.sql  20260418000003_notifications.up.sql  20260418000004_farm_zones.down.sql  20260418000004_farm_zones.up.sql  20260419000001_add_ml_labels.down.sql  20260419000001_add_ml_labels.up.sql  20260420000001_weather_thi.down.sql  20260420000001_weather_thi.up.sql  20260501000001_ref_date_cache.down.sql  20260501000001_ref_date_cache.up.sql  20260502000001_performance_indexes.down.sql  20260502000001_performance_indexes.up.sql
backend/migrations/down/: 20260406000001_down.sql  20260406000002_down.sql  20260410000001_down.sql  20260410000002_down.sql  20260410000003_down.sql  20260410000004_down.sql  20260410000005_down.sql  20260411000001_down.sql  20260411000002_down.sql  20260411000003_down.sql  20260412000001_down.sql  20260415000001_down.sql
backend/src/: config.rs  errors.rs  lib.rs  main.rs  openapi.rs  state.rs  validation.rs
backend/src/db/: clickhouse_sync.rs  mod.rs
backend/src/handlers/: analytics.rs  animals.rs  auth.rs  bulk_tank.rs  contacts.rs  demo.rs  events.rs  farm.rs  feed.rs  fitness.rs  grazing.rs  inventory.rs  lely.rs  locations.rs  milk.rs  mod.rs  notifications.rs  reports.rs  reproduction.rs  settings.rs  sires.rs  tasks.rs  transfers.rs  vet.rs  weather.rs
backend/src/lely/: client.rs  crypto.rs  mapper.rs  mod.rs  models.rs  service.rs  sync.rs
backend/src/middleware/: auth.rs  csrf.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
backend/src/models/: alerts.rs  analytics.rs  animal.rs  animal_stats.rs  bulk_tank.rs  contact.rs  feed.rs  fitness.rs  grazing.rs  inventory.rs  location.rs  milk.rs  mod.rs  paginated_result.rs  pagination.rs  preferences.rs  reports.rs  reproduction.rs  sire.rs  system_settings.rs  task.rs  timeline.rs  transfer.rs  user.rs  vet.rs
backend/src/seed/: generators.rs  mod.rs  names.rs
backend/src/services/: alert_engine.rs  analytics_service.rs  animal_service.rs  animal_stats_service.rs  bulk_tank_service.rs  contact_service.rs  feed_service.rs  fitness_service.rs  grazing_service.rs  inventory_service.rs  location_service.rs  milk_service.rs  ml_cache.rs  ml_client.rs  mod.rs  notification_service.rs  pdf_service.rs  predictive_service.rs  preferences_service.rs  reports_service.rs  reproduction_service.rs  retry.rs  sire_service.rs  stats_service.rs  system_settings_service.rs  task_service.rs  timeline_service.rs  token_revocation_service.rs  (+4 more)
backend/tests/: api_analytics.rs  api_animals.rs  api_auth.rs  api_authorization.rs  api_bulk_tank.rs  api_contacts.rs  api_edge_cases.rs  api_feed_crud.rs  api_lely.rs  api_locations_crud.rs  api_milk.rs  api_read_modules.rs  api_reports.rs  api_reports_settings.rs  api_reproduction.rs  api_settings_crud.rs
(+334 files in other folders)
