[package]
name = "milk-farm-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
bcrypt = "0.17"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
rand = "0.9"
clap = { version = "4", features = ["derive"] }

utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
genpdf = "0.2.0"
prometheus = "0.13"
tokio-retry = "0.3"
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
